@@ -49,7 +49,12 @@ extern fs_ml_input_device *g_fs_ml_input_devices;
 extern int g_fs_ml_input_device_count;
 extern int g_fs_ml_first_keyboard_index;
 extern int g_fs_ml_first_mouse_index;
-extern int g_fs_ml_first_joystick_index;
+// extern int g_fs_ml_first_joystick_index;
+#define MAX_SDL_JOYSTICK_IDS 1024
+#ifdef USE_SDL2
+#include <SDL.h>
+extern SDL_JoystickID g_fs_ml_sdl_joystick_index_map[MAX_SDL_JOYSTICK_IDS];
+#endif
 
 extern int g_fs_ml_running;
 
